tests/errors/generic_null_to_nonnull_argument.dang
# Null flowing through a generic function cannot be passed to a non-null argument
pub id(x: a): a { x }

pub takes(value: Int!): Int! { value }

pub result = takes(id(null))
